# motsart

./: .gitignore  404.html  README.md  complex_and_ts_search_cpu.sh  complex_and_ts_search_local.sh  compute_stats.sh  create_fine_tune_dft_data.sh  create_preprocess_rtsp_pretrain_data.sh  create_pretraining_dataset.sh  environment.yml  fetch_and_push_data_pkl_to_results.sh  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  rsync_exclude.txt  rsync_exclude_fetch.txt  sitemap.xml  validation_goflow.sh
goflow/: .gitignore  LICENCE  README.md  analysis_workflow.md  environment.yml  pyproject.toml
goflow/scripts/: fetch_from_dl.sh  fetch_reaction_analysis.sh  preprocess_cyclo.sh  preprocess_rdb7.sh  preprocess_rqm.sh  preprocess_rqm_multihead.sh  test_samples_analysis_cyclo.sh  test_samples_analysis_rdb7.sh  test_save_all_samples_cyclo.sh  test_save_all_samples_rdb7.sh  train_cyclo.sh  train_rdb7.sh  train_test_rqm.sh  train_test_rqm_multihead.sh  update_rqm_mh_chi_center.py
goflow/scripts/cyclo/: finetune_noise_1.sh  finetune_noise_25.sh  finetune_noise_sim.sh  finetune_num_datapoints.sh  finetune_test_odesolver.sh  pretrain_from_scratch.sh  pretrain_rtsp_from_rqm.sh  pretrain_ts_from_rqm.sh  pretrain_ts_from_rqm_gauss.sh  test_force_filter.sh  test_samples_analysis_forces.sh
goflow/scripts/mh/: readme.md  train_combined_cross_attn.sh  train_r_only.sh  train_rts_ca.sh  train_rts_ca_ch.sh  train_rtsp_ca.sh  train_rtsp_ca_IC.sh  train_rtsp_ca_IC_add_skip.sh  train_rtsp_ca_IC_ts.sh  train_ts_only.sh
goflow/src/goflow/: create_general_feat_dict.py  (+6 more)
(+165 files in other folders)
