[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "motsart"
authors = [
    { name = "Leonard Galustian", email = "leonard.galustian@tuwien.ac.at" },
]
description = "Accelerating Automated Transition State Search with Generative Models in a Low-Data Regime"
license = { text = "MIT License" }
requires-python = ">=3.11"
dependencies = []
readme = "README.md"
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "motsart.__version__" }

[project.urls]
"Homepage" = "https://github.com/heid-lab/motsart"